# segseq

./: README.md  segseq-reindex.hs  segseq.cabal  segseq.hs
SegSeq/: FastaDB.hs  GTF.hs  SegSequence.hs  SequenceAnnotation.hs
debian/: changelog  control  copyright  rules
src/: FastaDB.hs  GFF.hs  GTF.hs  SegSeq.cabal  SegSequence.hs  SequenceAnnotation.hs  gff_to_gtf.hs  segseq-acceptor.hs  segseq-complement  segseq-donor.hs  segseq-getseq  segseq-reindex.hs  segseq-sites.hs  segseq-start_codon.hs  segseq-stop_codon.hs  segseq.hs
